--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 		></script>
 		<link
 			rel="stylesheet"
-			href="https://bootswatch.com/4/united/bootstrap.min.css"
+			href="https://bootswatch.com/4/yeti/bootstrap.min.css"
 		/>
 	</head>
 	<body>
